Fix:layout issues

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -853,6 +853,14 @@ a {
   justify-content: space-between;
 }
 
+.justify-around {
+  justify-content: space-around;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
 .gap-10 {
   gap: 2.5rem;
 }
